webs/inventario/kfiles/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glpi-secure
  namespace: inventario
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tickets.senator.tools`)
      kind: Rule
      services:
        - name: glpi-service
          port: 80
  tls:
    certResolver: letsencrypt
